--- a/files/etc/logrotate.conf
+++ b/files/etc/logrotate.conf
@@ -1,6 +1,9 @@
 # THIS FILE IS AUTOMATICALLY DISTRIBUTED BY PUPPET.  ANY CHANGES WILL BE
 # OVERWRITTEN.
 
+# Fix https://bugs.launchpad.net/ubuntu/+source/logrotate/+bug/1278193
+su root syslog
+
 # Default values
 # rotate log files weekly
 weekly
